# RobustCause

./: .gitignore  CMakeLists.txt  README.md
bindings/: README.md
bindings/r/robustcause/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  robustcause-smoke-test.Rmd  robustcause-smoke-test.html
bindings/r/robustcause/R/: build_adstock.R  fit_adstock_model.R  fit_adstock_model_fast.R  fit_mm_dml.R  fit_mmm.R  fit_rlm.R  fit_s_estimator.R  fit_sc.R  sc_benchmark.R  sc_benchmark_design.R  sc_benchmark_run.R  sc_benchmark_sim.R  sc_benchmark_summary.R  sc_donor_robustness.R  sc_fit_core.R  sc_placebos.R  sc_prepare_matrix.R  sc_utils.R
bindings/r/robustcause/inst/include/mm_dml/: mm_dml.hpp
bindings/r/robustcause/man/: build_adstock.Rd  fit_adstock_model.Rd  fit_mm_dml.Rd  fit_mmm.Rd  fit_rlm.Rd  fit_s_estimator.Rd  fit_sc.Rd  make_custom_learner.Rd  plot_marginal_effect.Rd  plot_weights.Rd  vcov_robust.Rd
bindings/r/robustcause/src/: adstock_rcpp.cpp  init.cpp  mm_dml_core.cpp  mm_dml_rcpp.cpp  mmm_rcpp.cpp  rbridge.cpp  robust_adstock.cpp  robust_rlm_hc.cpp  robust_s_estimator.cpp  robust_sc.cpp  sc_native.cpp
bindings/r/robustcause/src/robust/: robust_mmm.hpp  robust_rlm_hc.hpp  robust_s_estimator.hpp  robust_sc.hpp
bindings/r/robustcause/tests/: testthat.R
bindings/r/robustcause/tests/testthat/: test-fit-sc-rnative.R  test-fit-sc.R  test-sc-benchmark.R
bindings/r/robustcause/vignettes/: synthetic-control.Rmd
cmake/: RobustCauseConfig.cmake.in
docs/: architecture.md
examples/: example_adstock.cpp  example_capi.cpp  example_mmm.cpp  example_rlm_hc.cpp  example_s_formula.cpp  example_sc.cpp
include/robust/: robust_adstock.hpp  robust_mmm.hpp  robust_rlm_hc.hpp  robust_s_estimator.hpp  robust_sc.hpp
include/robustcause/: capi.h  robustcause.hpp
src/: capi.cpp  robust_mmm.cpp  robust_rlm_hc.cpp  robust_sc.cpp
tests/: smoke.cpp
